syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

import "Repositories/Documents/Contracts/Data/Errors/AttributesErrors/document_attribute_error.proto";

message DocumentErrorsDb {
  repeated string errors = 1;
  repeated DocumentAttributeErrorDb attributes_errors = 2;
}
