syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

import "Grpc/Services/Documents/Queries/Get/Contracts/Detailed/SigningData/Workflows/document_signing_workflow.proto";

message DocumentSigningDataDto {
  repeated DocumentSigningWorkflowDto workflows = 1;
}
